2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amservice.c, recover-src/amrecover.c,
	  server-src/amcheck.c, server-src/amflush.c: Add a --version argument.

2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Check return value of fgets.

2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* many */*.pl: add --version option.

2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: print to debug file and server if unlink
	  fail.

2011-07-25  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amgtar.8.xml, man/xml-source/amraw.8.xml,
	  man/xml-source/amsamba.8.xml, man/xml-source/amstar.8.xml,
	  man/xml-source/amsuntar.8.xml,
	  man/xml-source/amzfs-sendrecv.8.xml: Document the diskdevice.

2011-07-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: new '--client-verbose' option.
	* man/xml-source/amcheck.8.xml: Document --client-verbos
	* config/amanda/progs.m4 (AMANDA_PROG_UNAME): new macro to find uname
	  path.
	* configure.in: call AMANDA_PROG_UNAME.
	* client-src/client_util.c (check_access, check_file, check_dir,
	  check_suid): return a gboolean.
	* client-src/client_util.h: Change prototypes.
	* client-src/selfcheck.c: Print the platform.
	* common-src/util.c (get_first_line): new function to return the first
	  output line of a command.
	* common-src/util.h (get_first_line): add prototype.
	* application-src/amgtar.c, application-src/ampgsql.pl,
	  application-src/amraw.pl, application-src/amsamba.pl,
	  application-src/amstar.c, application-src/amsuntar.pl,
	  application-src/amzfs-sendrecv.pl: print version of program.

2011-07-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Fix warning if $s is not used.

2011-07-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Support minimun number of digit in $3s
	  autolabel template.
	* man/xml-source/amanda.conf.5.xml: Document it.
  